navbar fixed-ish

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <nav class="navbar site-nav navbar-default navbar-fixed-top site-header">
               <div class="container">
                   <div class="navbar-header">
-                      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNav" aria-expanded="false" aria-controls="navbar">
+                      <button type="button" class="navbar-toggle navbar-menu-button" data-toggle="collapse" data-target="#myNav" aria-expanded="false" aria-controls="navbar">
                             <span class="sr-only">Toggle navigation</span>
                             <span class="glyphicon glyphicon-menu-hamburger"></span>
                             <span class="menu">Menu</span>
@@ -47,7 +47,7 @@
               <h1>Shelley Witte</h1>
               <h2>Cartography  |  GIS  |  Education</h2>
 
-              <h3>Hello, I'm Shelley -- a GIS certificate student at the University of Wisconsin-Madison. I have spent the last decade educating others about the wonders of astronomy and the Earth sciences. Now I'm interested in focusing on social justice through the vehicles of GIS and cartography.</h3>
+              <h4>Hello, I'm Shelley -- a GIS certificate student at the University of Wisconsin-Madison. I have spent the last decade educating others about the wonders of astronomy and the Earth sciences. Now I'm interested in focusing on social justice through the vehicles of GIS and cartography.</h4>
           </div>
       </div>
 
