--- a/work.html
+++ b/work.html
@@ -8,12 +8,10 @@
         <link rel="icon" href="img/favicon.ico">
         <title>Shelley Witte</title>
 
-        <meta charset=utf-8>
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/style.css">
-        <script type="text/javascript" src="lib/jquery-3.1.1.min.js"></script>
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
+
     </head>
 
     <body>
@@ -22,7 +20,7 @@
             <nav class="navbar site-nav navbar-default navbar-fixed-top main-navbar site-header">
                 <div class="container">
                     <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNav" aria-expanded="false" aria-controls="navbar">
+                        <button type="button" class="navbar-toggle navbar-menu-button" data-toggle="collapse" data-target="#myNav" aria-expanded="false" aria-controls="navbar">
                               <span class="sr-only">Toggle navigation</span>
                               <span class="glyphicon glyphicon-menu-hamburger"></span>
                               <span class="menu">Menu</span>
