--- a/maptiles.html
+++ b/maptiles.html
@@ -12,6 +12,7 @@
         <meta charset=utf-8>
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
         <script type="text/javascript" src="lib/jquery-3.1.1.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
