--- a/contact.html
+++ b/contact.html
@@ -51,9 +51,9 @@
               	.st1{fill:none;stroke:#33CC33;stroke-width:20;stroke-miterlimit:10;}
               	.st2{fill:none;stroke:#6633CC;stroke-width:20;stroke-miterlimit:10;}
               	.st3{fill:#333333;}
-              	.st4{font-family:'Dosis-Regular', Dosis;}
-              	.st5{font-size:40px;}
-              	.st6{font-size:28px;}
+              	.st4{font-family:'Dosis', Dosis, sans-serif;}
+              	.st5{font-size:40px; font-weight: 600;}
+              	.st6{font-size:28px; font-weight: 600;}
               	.st7{font-size:24px;}
               	.st8{fill:#FFFFFF;}
               	.st9{fill:#FFFFFF;stroke:#333333;stroke-width:5;stroke-miterlimit:10;}
