--- a/index.html
+++ b/index.html
@@ -74,25 +74,24 @@
       </div>
 
 
-          <footer>
-              <div class="jumbotron footer">
-                  <div class="container">
-                      <div class="row">
-                          <div class="col-md-2">
-                              <div class="thumbnail">
-                                  <img class="responsive center-block" src="img/mini_metro.png" alt="mini metro"/>
-                              </div>
+      <footer>
+          <div class="jumbotron footer">
+              <div class="container">
+                  <div class="row">
+                      <div class="col-md-2 col-sm-3 col-xs-4">
+                          <div class="thumbnail">
+                              <img class="responsive center-block" src="img/mini_metro.png" alt="mini metro"/>
                           </div>
-                          <div class="col-md-4">
-                              <h5><b>Shelley Witte</b></h5>
-                              <h5>email:  shelleywitte@gmail.com</h5>
-                              <h5>Twitter:  <a href="https://twitter.com/ohthatswitte">@ohthatswitte</h5>
-                          </div>
+                      </div>
+                      <div class="col-md-4">
+                          <h5><b>Shelley Witte</b></h5>
+                          <h5>email:  shelleywitte@gmail.com</h5>
+                          <h5>Twitter:  <a href="https://twitter.com/ohthatswitte">@ohthatswitte</h5>
                       </div>
                   </div>
               </div>
-          </footer>
+          </div>
+      </footer>
 
-      </body>
-
-    </html>
+    </body>
+</html>
