--- a/work.html
+++ b/work.html
@@ -55,51 +55,45 @@
 <!-- thumbnails start here -->
         <div class="container";>
             <div class="row">
-                <div class="col-md-4">
-                    <div class="portfolio-thumbnail">
+                <div class="col-md-4 col-xs-12">
+                    <div class="thumbnail portfolio-thumbnail">
                         <a href="unintended_pregnancies.html">
-                            <figure class="img-hover">
-                                <img class="img-hover" src="img/pregnancy_crop.png" alt="" class="img-responsive"/></figure></a>
+                                <img class="img-hover" src="img/pregnancy_crop.png" alt="" class="img-responsive center-block"/></figure></a>
                     </div>
                 </div>
 
-                <div class="col-md-4">
-                    <div class="portfolio-thumbnail">
+                <div class="col-md-4 col-xs-12">
+                    <div class="thumbnail portfolio-thumbnail">
                         <a href="terrain_map.html">
-                            <figure class="img-hover">
-                                <img class="img-hover" src="img/terrain_crop.png" alt="" class="img-responsive"/></figure></a>
+                                <img class="img-hover" src="img/terrain_crop.png" alt="" class="img-responsive center-block"/></figure></a>
                     </div>
                 </div>
 
-                <div class="col-md-4">
-                    <div class="portfolio-thumbnail">
+                <div class="col-md-4 col-xs-12">
+                    <div class="thumbnail portfolio-thumbnail">
                         <a href="maptiles.html">
-                            <figure class="img-hover">
-                                <img class="img-hover" src="img/maptiles.png" alt="" class="img-responsive"/></figure></a>
+                                <img class="img-hover" src="img/maptiles.png" alt="" class="img-responsive center-block"/></figure></a>
                     </div>
                 </div>
 
-                <div class="col-md-4">
-                    <div class="portfolio-thumbnail">
+                <div class="col-md-4 col-xs-12">
+                    <div class="thumbnail portfolio-thumbnail">
                         <a href="achievementgap.html">
-                            <figure class="img-hover">
-                                <img class="img-hover" src="img/achievement_crop.png" alt="" class="img-responsive"/></figure></a>
+                                <img class="img-hover" src="img/achievement_crop.png" alt="" class="img-responsive center-block"/></figure></a>
                     </div>
                 </div>
 
-                <div class="col-md-4">
-                    <div class="portfolio-thumbnail">
+                <div class="col-md-4 col-xs-12">
+                    <div class="thumbnail portfolio-thumbnail">
                         <a href="campaign_finance.html">
-                            <figure class="img-hover">
-                                <img class="img-hover" src="img/campaign_crop.png" alt="" class="img-responsive"/></figure></a>
+                                <img class="img-hover" src="img/campaign_crop.png" alt="" class="img-responsive center-block"/></figure></a>
                     </div>
                 </div>
 
-                <div class="col-md-4">
-                    <div class="portfolio-thumbnail">
+                <div class="col-md-4 col-xs-12">
+                    <div class="thumbnail portfolio-thumbnail">
                         <a href="UW_incoming.html">
-                            <figure class="img-hover">
-                                <img class="img-hover" src="img/incoming_crop.png" alt="" class="img-responsive"/></figure></a>
+                                <img class="img-hover" src="img/incoming_crop.png" alt="" class="img-responsive center-block"/></figure></a>
                     </div>
                 </div>
 
@@ -113,7 +107,7 @@
             <div class="jumbotron footer">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-2">
+                        <div class="col-md-2 col-sm-3 col-xs-4">
                             <div class="thumbnail">
                                 <img class="responsive center-block" src="img/mini_metro.png" alt="mini metro"/>
                             </div>
