--- a/work.html
+++ b/work.html
@@ -10,7 +10,6 @@
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
 
     </head>
@@ -55,45 +54,51 @@
 <!-- thumbnails start here -->
         <div class="container";>
             <div class="row">
-                <div class="col-md-4 col-xs-12">
-                    <div class="thumbnail portfolio-thumbnail">
+                <div class="col-md-4">
+                    <div class="portfolio-thumbnail">
                         <a href="unintended_pregnancies.html">
-                                <img class="img-hover" src="img/pregnancy_crop.png" alt="" class="img-responsive center-block"/></figure></a>
+                            <figure class="img-hover">
+                                <img class="img-hover" src="img/pregnancy_crop.png" alt="The Cost of Unintended Pregnancies in the United States" class="img-responsive"/></figure></a>
                     </div>
                 </div>
 
-                <div class="col-md-4 col-xs-12">
-                    <div class="thumbnail portfolio-thumbnail">
+                <div class="col-md-4">
+                    <div class="portfolio-thumbnail">
                         <a href="terrain_map.html">
-                                <img class="img-hover" src="img/terrain_crop.png" alt="" class="img-responsive center-block"/></figure></a>
+                            <figure class="img-hover">
+                                <img class="img-hover" src="img/terrain_crop.png" alt="Bicycle Race Route in Southeastern Australia" class="img-responsive"/></figure></a>
                     </div>
                 </div>
 
-                <div class="col-md-4 col-xs-12">
-                    <div class="thumbnail portfolio-thumbnail">
+                <div class="col-md-4">
+                    <div class="portfolio-thumbnail">
                         <a href="maptiles.html">
-                                <img class="img-hover" src="img/maptiles.png" alt="" class="img-responsive center-block"/></figure></a>
+                            <figure class="img-hover">
+                                <img class="img-hover" src="img/maptiles.png" alt="Walking Dead Maptiles" class="img-responsive"/></figure></a>
                     </div>
                 </div>
 
-                <div class="col-md-4 col-xs-12">
-                    <div class="thumbnail portfolio-thumbnail">
+                <div class="col-md-4">
+                    <div class="portfolio-thumbnail">
                         <a href="achievementgap.html">
-                                <img class="img-hover" src="img/achievement_crop.png" alt="" class="img-responsive center-block"/></figure></a>
+                            <figure class="img-hover">
+                                <img class="img-hover" src="img/achievement_crop.png" alt="8th Grade Science Achievement Gap" class="img-responsive"/></figure></a>
                     </div>
                 </div>
 
-                <div class="col-md-4 col-xs-12">
-                    <div class="thumbnail portfolio-thumbnail">
+                <div class="col-md-4">
+                    <div class="portfolio-thumbnail">
                         <a href="campaign_finance.html">
-                                <img class="img-hover" src="img/campaign_crop.png" alt="" class="img-responsive center-block"/></figure></a>
+                            <figure class="img-hover">
+                                <img class="img-hover" src="img/campaign_crop.png" alt="" class="img-responsive"/></figure></a>
                     </div>
                 </div>
 
-                <div class="col-md-4 col-xs-12">
-                    <div class="thumbnail portfolio-thumbnail">
+                <div class="col-md-4">
+                    <div class="portfolio-thumbnail">
                         <a href="UW_incoming.html">
-                                <img class="img-hover" src="img/incoming_crop.png" alt="" class="img-responsive center-block"/></figure></a>
+                            <figure class="img-hover">
+                                <img class="img-hover" src="img/incoming_crop.png" alt="" class="img-responsive"/></figure></a>
                     </div>
                 </div>
 
@@ -107,7 +112,7 @@
             <div class="jumbotron footer">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-2 col-sm-3 col-xs-4">
+                        <div class="col-md-2">
                             <div class="thumbnail">
                                 <img class="responsive center-block" src="img/mini_metro.png" alt="mini metro"/>
                             </div>
