--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <link rel="stylesheet" href="css/bootstrap-theme.min.css">
       <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
       <link rel="stylesheet" href="css/style.css">
   </head>
 
@@ -30,7 +31,7 @@
                   </div>
                   <div id="myNav" class="navbar-collapse collapse ">
                       <ul class="nav navbar-nav navbar-right">
-                          <li><a href="Shelley_Witte_resume_2016.pdf" target="_blank">Resume<span class="sr-only"></span></a></li>
+                          <li><a href="resume.html">Resume</a></li>
                           <li><a href="work.html">Work</a></li>
                           <li><a href="contact.html">Contact</a></li>
                       </ul>
@@ -48,25 +49,25 @@
               <h1>Shelley Witte</h1>
               <h2>Cartography  |  GIS  |  Education</h2>
 
-              <h4>Hello, I'm Shelley -- a GIS certificate student at the University of Wisconsin-Madison. I have spent the last decade educating others about the wonders of astronomy and the Earth sciences. Now I'm interested in focusing on social justice through the vehicles of GIS and cartography.</h4>
+              <h4 style="font-family: Dosis;">Hello, I'm Shelley -- a GIS certificate student at the University of Wisconsin-Madison. I have spent the last decade educating others about the wonders of astronomy and the Earth sciences. Now I'm interested in focusing on social justice through the vehicles of GIS and cartography.</h4><br>
           </div>
       </div>
 
       <div class="container">
           <div class="row">
               <div class="col-md-4 col-sm-6 col-xs-12">
-                  <h2>Cartography</h2>
-                  <p>As a highly visual learner and an educator, I've been facinated by a map's ability to convey a wealth of information in a concise manner. Cartographers are educators, scientists, and artists. I fully embrace the practice of weaving together science and art through geovisualization and beautiful design.</p>
+                  <h2><img src="img/map_graphic.png" alt="Map"> Cartography</h2>
+                  <p style="font-family: Dosis;">As a highly visual learner and an educator, I've been facinated by a map's ability to convey a wealth of information in a concise manner. Cartographers are educators, scientists, and artists. I fully embrace the practice of weaving together science and art through geovisualization and beautiful design.</p>
                   <!-- <p><a class="btn btn-default" href="#" role="button">See my work &raquo;</a></p> -->
               </div>
               <div class="col-md-4 col-sm-6 col-xs-12">
-                  <h2>GIS</h2>
-                  <p>You can't solve problems unless you are aware of and understand their history and complexities. I love how GIS can expose, evaluate, and solve complex issues. My professional goal is to help uncover social and environmental injustices and communicate them to wider audiences.  </p>
+                  <h2><img src="img/GIS.png" alt="Map"> GIS</h2>
+                  <p style="font-family: Dosis;">You can't solve problems unless you are aware of and understand their history and complexities. I love how GIS can expose, evaluate, and solve complex issues. My professional goal is to help uncover social and environmental injustices and communicate them to wider audiences.  </p>
                   <!-- <p><a class="btn btn-default" href="#" role="button">See my work &raquo;</a></p> -->
               </div>
               <div class="col-md-4 col-sm-6 col-xs-12">
-                  <h2>Education</h2>
-                  <p>Teaching will always be one of my passions. My 8 years in museum and classroom education have given me invaluable experiences that influence my work in cartography and GIS. I hope to continue to utilize my education background in my professional life. </p>
+                  <h2><img src="img/telescope.png" alt="Telescope"> Education</h2>
+                  <p style="font-family: Dosis;">Teaching will always be one of my passions. My 8 years in museum and classroom education have given me invaluable experiences that influence my work in cartography and GIS. I hope to continue to utilize my education background in my professional life. </p>
                   <!-- <p><a class="btn btn-default" href="#" role="button">See my work &raquo;</a></p> -->
               </div>
           </div>
