--- a/work.html
+++ b/work.html
@@ -10,6 +10,8 @@
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
 
     </head>
@@ -29,7 +31,7 @@
                     </div>
                     <div id="myNav" class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="Shelley_Witte_resume_2016.pdf" target="_blank">Resume<span class="sr-only"></span></a></li>
+                            <li><a href="resume.html">Resume</a></li>
                             <li><a class="current-page" href="work.html">Work</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
