--- a/unintended_pregnancies.html
+++ b/unintended_pregnancies.html
@@ -55,7 +55,7 @@
             <div class="row">
                 <div class="col-md-12 col-xs-12">
                     <div class="thumbnail portfolio-thumbnail">
-                        <img src="img/pregnancy_full.png" alt="Unintended Pregnancies"/>
+                        <img src="img/pregnancy_full_raster.png" alt="Unintended Pregnancies"/>
                     </div>
                 </div>
             </div>
