--- a/resume.html
+++ b/resume.html
@@ -46,10 +46,9 @@
 
           <div class= "row resume-link">
               <div class="col-sm-12">
-                  <a href="Shelley_Witte_resume_Mar2017.pdf" style="float:right;"><strong>PDF of my resumé</strong></a>
+                  <a href="Shelley_Witte_resume_May2017.pdf" style="float:right;"><strong>PDF of my resumé</strong></a>
               </div>
           </div>
-
 
           <div class= "row resume-section">
               <h2 class="resume-title" style="color:#33cc33;"><strong>Technical Skills</strong></h3>
@@ -59,7 +58,7 @@
               </div>
               <div class="col-sm-12">
                   <h3>Programming</h3>
-                  <p> HTML/CSS, JavaScript:  D3, jQuery, and Leaflet, Python </p>
+                  <p> HTML/CSS, JavaScript:  D3, jQuery, and Leaflet; Python </p>
               </div>
           </div>
 
@@ -67,50 +66,58 @@
               <h2 class="resume-title" style="color:#33cc33;"><strong>Work Experience</strong></h2>
               <div class="col-md-12">
                   <h4>Applied Population Lab</h4>
-                  <h6><img src="img/GIS.png" alt="GIS" style="max-width:25px; height:auto"> <img src="img/map_graphic.png" alt="Map" style="max-width:35px; height:auto"> Student Intern | <strong>October 2016 &mdash; Present</strong> | Madison, WI</h6>
-                  <p>Description</p>
+                  <h6><img src="img/GIS.png" alt="GIS" style="max-width:25px; height:auto"> <img src="img/map_graphic.png" alt="Map" style="max-width:35px; height:auto"> Student Intern | <strong>October 2016 &mdash; May 2017</strong> | Madison, WI</h6>
+                  <p>The Applied Population Lab conducts applied demographic research and outreach. I completed my GIS Capstone project with APL; conducting an exploratory study of Depression-era Wisconsin residential security maps. Using current demographic data, we conducted a spatial analysis of five Wisconsin cities to see if correlations exist between socioeconomic indicators and the Home Owners' and Loan Corporation neighborhood grades from the 1930s.</p>
+                  <br>
               </div>
 
               <div class="col-md-12">
                   <h4>Chancellor's Scholarship and Powers-Knapp Scholarship Programs</h4>
-                  <h6> Student Office Assistant | <strong>October 2016 &mdash; Present</strong> | Madison, WI</h6>
-                  <p>The Chancellor's Scholarship and Powers-Knapp Scholarship Programs are </p>
+                  <h6> Student Office Assistant | <strong>October 2016 &mdash; May 2017</strong> | Madison, WI</h6>
+                  <p>The Chancellor's Scholarship and Powers-Knapp Scholarship Programs are merit-based scholarhip programs for undegradute students at the University of Wisconsin-Madison. It was a privilege to be a part of an organization that is  committed to attracting and supporting highly gifted and talented students from underrepresented and disadvantaged backgrounds. </p>
+                  <br>
               </div>
 
               <div class="col-md-12">
-                  <h4>University of Wisconsin Forest Landscape Ecology Lab</h4>
-                  <h6><img src="img/GIS.png" alt="GIS" style="max-width:25px; height:auto"> <img src="img/map_graphic.png" alt="Map" style="max-width:35px; height:auto"> Student Digitzer | <strong>November 2015 &mdash; Present</strong> | Madison, Wisconsin</h6>
-                  <p>Description</p>
+                  <h4>University of Wisconsin Forest and Landscape Ecology Lab</h4>
+                  <h6><img src="img/GIS.png" alt="GIS" style="max-width:25px; height:auto"> <img src="img/map_graphic.png" alt="Map" style="max-width:35px; height:auto"> Student Digitzer | <strong>November 2015 &mdash; May 2017</strong> | Madison, Wisconsin</h6>
+                  <p>The Wisconsin Land Economic Inventory was a mapping project from the 1930s that surveyed a vast majority of the state to determine how the land could be used more productively. I was one of many students who have helped digitize the land survey maps since 2008. My time in the Bordner Lab provided me with invaluable experience with ArcGIS, workflows in GIS, and maintaining databases.</p>
+                  <br>
               </div>
 
               <div class="col-md-12">
                   <h4>Madison East High School</h4>
                   <h6><img src="img/telescope.png" alt="Telescope" style="max-width:30px; height:auto"> Earth Science Teacher | <strong>August 2012 &mdash; June 2015</strong> | Madison, WI</h6>
-                  <p>Description</p>
+                  <p>My time working with high school students was challenging yet very rewarding. My students ranged from academically gifted to science and school-adverse. I loved finding creative ways to make astronomy, geology, and meteorology interesting, relevant, and accessible to them. I am proud to have been a Purgolder for three years. <strong><font color="#6633cc">Eastside Pride!</font></strong> </p>
+                  <br>
               </div>
 
               <div class="col-md-12">
                   <h4>Univeristy of Wisconsin PEOPLE Program</h4>
-                  <h6><img src="img/telescope.png" alt="Telescope" style="max-width:30px; height:auto"> Science Teacher | <strong>Summers:  June 2014 &mdash; July 2015</strong> | Madison, Wisconsin</h6>
-                  <p>Description</p>
+                  <h6><img src="img/telescope.png" alt="Telescope" style="max-width:30px; height:auto"> Science Teacher | <strong>Summers:  June 2013 &mdash; July 2015</strong> | Madison, Wisconsin</h6>
+                  <p>I was fortunate to be involved in the 3-week residential summer enrichment program for freshman and sophomore high school students. I supported UW graduate students in implementing their lesson plans in the biological and physical sciences.</p>
+                  <br>
               </div>
 
               <div class="col-md-12">
                   <h4>Monona Grove and Madison Metropolitan School Districts</h4>
                   <h6><img src="img/telescope.png" alt="Telescope" style="max-width:30px; height:auto"> Substitute Teacher| <strong>October 2011 &mdash; June 2012</strong> | Madison, Wisconsin</h6>
-                  <p>Description</p>
+                  <p> Subbing allowed me to react and adapt to a wide variety of teaching environments and situations. I enjoyed getting to teach different subjects on a daily basis.</p>
+                  <br>
               </div>
 
               <div class="col-md-12">
                   <h4>Smithsonian National Air and Space Museum</h4>
                   <h6><img src="img/telescope.png" alt="Telescope" style="max-width:30px; height:auto"> Astronomy Educator| <strong>May 2009 &mdash; August 2011</strong> | Washington, DC</h6>
-                  <p>Description</p>
+                  <p>Who could ask for a better post-college job? I got to be an astronomy nerd, every day, interacting with thousands of visitors through programming in the <a href="https://airandspace.si.edu/visit/museum-dc/things-do/phoebe-waterman-haas-public-observatory">public observatory</a>, planetarium, and Explore the Universe gallery. I never tired of showing visitors views of the planets, Moon, and the Sun through telescopes, giving tours of constellations, or explaining complext concepts in astronomy.</p>
+                  <br>
               </div>
 
               <div class="col-md-12">
                   <h4>University of Wisconsin Foundation</h4>
                   <h6> Telefund Student Caller| <strong>June 2007 &mdash; April 2009</strong> | Madison, WI</h6>
-                  <p>Description</p>
+                  <p>If you are a UW-Madison alum, I was one of those students who called you during dinner and/or a Packer game to update you on campus happenings and why private support was (and still is!) vital to the success of the university.</p>
+                  <br>
               </div>
           </div>
 
@@ -119,7 +126,7 @@
               <div class="col-md-12">
                   <h3>University of Wisconsin &mdash; Madison</h3>
                   <h5><img src="img/GIS.png" alt="GIS" style="max-width:25px; height:auto"> Certificate in GIS </h5>
-                  <h6><strong>September 2015 &mdash; Present</strong></h6>
+                  <h6><strong>September 2015 &mdash; May 2017</strong></h6>
               </div>
 
               <div class="col-md-12">
