--- a/unintended_pregnancies.html
+++ b/unintended_pregnancies.html
@@ -55,11 +55,11 @@
             <div class="row">
                 <div class="col-md-12 col-xs-12">
                     <div class="thumbnail portfolio-thumbnail">
-                        <img src="img/pregnancy_full_raster.png" alt="Unintended Pregnancies"/>
+                        <img src="img/pregnancy_full.png" alt="Unintended Pregnancies"/>
                     </div>
                 </div>
             </div>
-            <a href="/portfolio/">&larr; back to portfolio</a>
+            <a href="/work.html">&larr; back to portfolio</a>
         </div>
     </body>
 </html>
