--- a/UW_incoming.html
+++ b/UW_incoming.html
@@ -49,13 +49,13 @@
                 <div class="col-md-12 col-xs-12">
                         <h1 class="page-header">Home States of Incoming UW Freshmen</h1>
                         <p>This map was my final project for my introductory cartography class in undergrad. Most of my friends came from out of state, like me (Minnesota), so I wanted to see where other UW students were coming from. I made a proportional/flow symbol map to visualize the incoming freshman class for Fall 2006. </p>
-                        <br>
+                        <a href="/work.html">&larr; back to portfolio</a>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md-12 col-xs-12">
-                    <div class="thumbnail portfolio-thumbnail">
+                    <div class="thumbnail">
                         <img src="img/incoming_full.png" alt="Incoming Freshmen"/>
                     </div>
                 </div>
