--- a/maptiles.html
+++ b/maptiles.html
@@ -49,15 +49,16 @@
                 <div class="col-md-12 col-xs-12">
                         <h1 class="page-header">The Walking Dead map tile</h1>
                         <p>One of my favorite TV shows is The Walking Dead. I wanted this tileset to capture the aesthetic style of the show's opening credits from the yellow, dingy tint to the decay of the humans and the architecture post-zombie apocalypse. </p>
-                        <br>
-
+                        <p><i>Click image to go to actual maptiles.</i></p>
+                        <a href="/work.html">&larr; back to portfolio</a>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md-12 col-xs-12">
-                    <div class="thumbnail portfolio-thumbnail">
-                        <img src="img/maptiles.gif" alt="walking dead"/>
+                    <div class="thumbnail">
+                        <a href="https://api.mapbox.com/v4/shelleywitte.06184ec6/page.html?access_token=pk.eyJ1Ijoic2hlbGxleXdpdHRlIiwiYSI6ImNpdmllOXpwejAxangyc2xtaHgxeDN4ajkifQ.tI2-5Nmyzv2LM0UhACzZ4g#4/35.21/-106.17">
+                            <img src="img/maptiles.gif" alt="walking dead"/></a>
                     </div>
                 </div>
             </div>
