--- a/resume.html
+++ b/resume.html
@@ -67,14 +67,14 @@
               <div class="col-md-12">
                   <h4>Applied Population Lab</h4>
                   <h6><img src="img/GIS.png" alt="GIS" style="max-width:25px; height:auto"> <img src="img/map_graphic.png" alt="Map" style="max-width:35px; height:auto"> Student Intern | <strong>October 2016 &mdash; May 2017</strong> | Madison, WI</h6>
-                  <p>The Applied Population Lab conducts applied demographic research and outreach. I completed my GIS Capstone project with APL; conducting an exploratory study of Depression-era Wisconsin residential security maps. Using current demographic data, we conducted a spatial analysis of five Wisconsin cities to see if correlations exist between socioeconomic indicators and the Home Owners' and Loan Corporation neighborhood grades from the 1930s.</p>
+                  <p>The Applied Population Lab conducts applied demographic research and outreach. I completed my GIS Capstone project with APL, conducting an exploratory study of Depression-era Wisconsin residential security maps. Using current demographic data, we conducted a spatial analysis of five Wisconsin cities to see if correlations exist between socioeconomic indicators and the Home Owners' and Loan Corporation neighborhood grades from the 1930s.</p>
                   <br>
               </div>
 
               <div class="col-md-12">
                   <h4>Chancellor's Scholarship and Powers-Knapp Scholarship Programs</h4>
                   <h6> Student Office Assistant | <strong>October 2016 &mdash; May 2017</strong> | Madison, WI</h6>
-                  <p>The Chancellor's Scholarship and Powers-Knapp Scholarship Programs are merit-based scholarhip programs for undegradute students at the University of Wisconsin-Madison. It was a privilege to be a part of an organization that is  committed to attracting and supporting highly gifted and talented students from underrepresented and disadvantaged backgrounds. </p>
+                  <p>The Chancellor's Scholarship and Powers-Knapp Scholarship Programs are merit-based scholarship programs for undegradute students at the University of Wisconsin-Madison. It was a privilege to be a part of an organization that is  committed to attracting and supporting highly gifted and talented students from underrepresented and disadvantaged backgrounds. </p>
                   <br>
               </div>
 
@@ -117,7 +117,7 @@
                   <h4>University of Wisconsin Foundation</h4>
                   <h6> Telefund Student Caller| <strong>June 2007 &mdash; April 2009</strong> | Madison, WI</h6>
                   <p>If you are a UW-Madison alum, I was one of those students who called you during dinner and/or a Packer game to update you on campus happenings and why private support was (and still is!) vital to the success of the university.</p>
-                  <br>
+
               </div>
           </div>
 
@@ -153,7 +153,25 @@
 
         </div>
     </div>
-
+    <br>
+    <footer>
+        <div class="jumbotron footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-2 col-sm-3 col-xs-4">
+                        <div class="thumbnail">
+                            <img class="responsive center-block" src="img/mini_metro.png" alt="mini metro"/>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <h5><b>Shelley Witte</b></h5>
+                        <h6>email:  shelleywitte@gmail.com</h6>
+                        <h6>Twitter: <a href="https://twitter.com/ohthatswitte">@ohthatswitte</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
   </body>
 
 </html>
