--- a/unintended_pregnancies.html
+++ b/unintended_pregnancies.html
@@ -48,13 +48,14 @@
                 <div class="col-md-12 col-xs-12">
                         <h1 class="page-header">Costs of Unintended Pregnancies</h1>
                         <p>This infographic was made in my advanced cartography course. It gives the financial and health costs related to unintended pregnancies in the United States. </p>
+                        <a href="/work.html">&larr; back to portfolio</a>
 
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md-12 col-xs-12">
-                    <div class="thumbnail portfolio-thumbnail">
+                    <div class="thumbnail">
                         <img src="img/pregnancy_full.png" alt="Unintended Pregnancies"/>
                     </div>
                 </div>
