--- a/work.html
+++ b/work.html
@@ -45,7 +45,7 @@
         <div class="container">
 			<div class="row header">
 				<div class="col-md-12">
-					<h1>Portfolio</h1>
+					<h1 class="page-header">Portfolio</h1>
                     <h3>My collection of work from cartography and GIS coursework at the University of Wisconsin-Madison.</h3>
                     <br>
 				</div>
@@ -82,6 +82,14 @@
 
                 <div class="col-md-4">
                     <div class="portfolio-thumbnail">
+                        <a href="bwca.html">
+                            <figure class="img-hover">
+                                <img class="img-hover" src="img/bwca_crop.png" alt="Walking Dead Maptiles" class="img-responsive"/></figure></a>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="portfolio-thumbnail">
                         <a href="achievementgap.html">
                             <figure class="img-hover">
                                 <img class="img-hover" src="img/achievement_crop.png" alt="8th Grade Science Achievement Gap" class="img-responsive"/></figure></a>
@@ -107,7 +115,6 @@
             </div>
         </div>
 
-
         <br>
 
         <footer>
@@ -121,8 +128,8 @@
                         </div>
                         <div class="col-md-4">
                             <h5><b>Shelley Witte</b></h5>
-                            <h5>email:  shelleywitte@gmail.com</h5>
-                            <h5>Twitter:  <a href="https://twitter.com/ohthatswitte">@ohthatswitte</h5>
+                            <h6>email:  shelleywitte@gmail.com</h6>
+                            <h6>Twitter: <a href="https://twitter.com/ohthatswitte">@ohthatswitte</h6>
                         </div>
                     </div>
                 </div>
