--- a/achievementgap.html
+++ b/achievementgap.html
@@ -50,15 +50,15 @@
                         <h1 class="page-header">8th Grade Science Achievement Gaps</h1>
                         <p>Having taught science in an urban school district, I witnessed firsthand the disparity in educational performance between different socioeconomic groups. Science is such a practical discipline that helps students understand the world around them and to also think critically. Reducing disparities while lifting everyone up together is something I hope the U.S. focuses on in the coming years.  </p>
                         <p>This is typically an interactive map. Link to the working interactive coming soon!</p>
-                        <br>
                         <p>
+                        <a href="/portfolio/">&larr; back to portfolio</a>
 
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md-12 col-xs-12">
-                    <div class="thumbnail portfolio-thumbnail">
+                    <div class="thumbnail">
                         <img src="img/achievementgap.png" alt="Achievement Gap"/>
                     </div>
                 </div>
