--- a/campaign_finance.html
+++ b/campaign_finance.html
@@ -48,9 +48,9 @@
             <div class="row header">
                 <div class="col-md-12 col-xs-12">
                         <h1 class="page-header">Money in Politics</h1>
-                        <p>The 2016 Presidental Election was not normal in any sense of the word. In the spring of 2016, I worked with two fellow cartography students to map individual campaign contributions from U.S. citizens. We used d3 to map the map interactive. Users can look at the total contributions per state, per capita, and compare contributions for two candidates.  </p>
-                        <p>This is typically an interactive map. Link to the working interactive coming soon!</p>
-                        <br>
+                        <p>The 2016 Presidental Election was not normal in any sense of the word. In the spring of 2016, I worked with two fellow cartography students to map individual campaign contributions from U.S. citizens. We used d3 to create our interactive map. Users can look at the total contributions per state, per capita, and compare contributions for two candidates.  </p>
+                        <p><i>Click image to go to interactive.</i></p>
+                        <a href="/work.html">&larr; back to portfolio</a>
                         <p>
 
                 </div>
@@ -58,8 +58,9 @@
 
             <div class="row">
                 <div class="col-md-12 col-xs-12">
-                    <div class="thumbnail portfolio-thumbnail">
-                        <img src="img/campaign_full.png" alt="Money"/>
+                    <div class="thumbnail">
+                        <a href="http://campaigncontributions.github.io/">
+                            <img src="img/campaign_full.png" alt="Money"/></a>
                     </div>
                 </div>
             </div>
